<resources>
    <string name="app_name" translatable="false">Hawkers Survey Test App</string>
    <string-array name="education">
        <item>a. Primary (5th std)</item>
        <item>b. Middle (6th to 8th std)</item>
        <item>c. Secondary (till 10th Std)</item>
        <item>d. Higher Secondary (till 12th Std)</item>
        <item>e. Diploma/ Graduate/ Postgraduate</item>
        <item>f. Illiterate</item>
    </string-array>
    <string-array name="vehicals">
        <item>Pucca</item>
        <item>Kuchha</item>
        <item>Metallic cycle cart</item>
        <item>other</item>
    </string-array>
    <string-array name="time_select">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string-array name="choice">
        <item>First Choice (within 1 km)</item>
        <item>Second Choice (within 3 km)</item>
        <item>Third Choice (within 5km) </item>
        <item>Fourth Choice (5+km)</item>
        <item>Fifth Choice (5+km)</item>
    </string-array>
    <string-array name="identity_proof_type">
        <item>Select</item>
        <item>Aadhar Card-AC</item>
        <item>Driving Licence-DL</item>
        <item>Voter-ID-Card-VI</item>
        <item>Bank Passbook-BP</item>
        <item>Other</item>
    </string-array>
    <string-array name="vending_history_proof_type">
        <item>Select</item>
        <item>Festival Receipts-FR</item>
        <item>Tokens-TK</item>
        <item>Challan(s)-LC</item>
        <item>Traffic Police Challan(s)-PC</item>
        <item>Police Challan-PC</item>
        <item>Receipt of Fine or Fees-FR</item>
        <item>Certificates issued by Local Authorities-CL</item>
        <item>Document attested by the relevant RWA or Market Association as conferring such rights 26-CL</item>
        <item>None</item>
    </string-array>
    <string-array name="corporatation">
        <item>ED-East Delhi Municipal Corporation</item>
        <item>SD-South Delhi Municipal Corporation</item>
        <item>ND-North Delhi Municipal Corporation</item>
        <item>NC-New Delhi Municipal Council</item>
        <item>CN-Delhi Cantonment Board</item>
    </string-array>
    <string-array name="zones">
        <item>NZ-No Zone</item>
        <item>01-Shahdara South Zone</item>
        <item>02-Shahdara North Zone</item>
        <item>03-Central Zone</item>
        <item>04-South Zone</item>
        <item>05-West Zone</item>
        <item>06-Nalafgarh Zone</item>
        <item>07-City-SP Zone</item>
        <item>08-Karol Bagh Zone</item>
        <item>09-Keshav Puram</item>
        <item>10-Narela</item>
        <item>11-Rohini</item>
        <item>12-Civil Lines</item>
    </string-array>
    <string-array name="items">
        <item>a. Food/ Snack with gas cylinder/ fire </item>
        <item>b. Food/ Snack without gas cylinder/ fire</item>
        <item>c. Vegetables</item>
        <item>d. Electronic items</item>
        <item>e. Clothes</item>
        <item>f. Household items</item>
        <item>g. Fancy items</item>
        <item>h. Pan/tobacco</item>
        <item>i. Flower</item>
        <item>j. Footwear</item>
        <item>k. Utilities</item>
        <item>l. Fruits</item>
        <item>m. Pottery</item>
        <item>n. Toys</item>
        <item>o. Bags</item>
    </string-array>
    <string-array name="category">
        <item>GEN</item>
        <item>SC</item>
        <item>ST</item>
        <item>OBC</item>
        <item>PERSONNEL</item>
        <item>WOMEN</item>
        <item>WIDOW</item>
        <item>MINORITY</item>
        <item>PERSON WITH DISABILITIES</item>
        <item>EX-SERVICEMEN</item>
        <item>OTHERS</item>
    </string-array>
    <string name="new_survey">New Survey</string>
    <string name="pending_survey">Pending Survey</string>
    <string name="pending_survey_list" translatable="false">Pending Survey List</string>
    <string name="completed" translatable="false">Completed Survey List</string>
    <string name="view_survey" translatable="false">View Survey</string>
    <string name="view_survey_list" translatable="false">View Survey List</string>
    <string name="survey_list" translatable="false">Surveyor List</string>
    <string name="suspended_survey" translatable="false">Suspended Survey</string>
    <string name="suspended_survey_list" translatable="false">Suspended Survey List</string>
    <string name="Local_survey" translatable="false">Offline Survey List</string>
    <string name="Local_survey_list" translatable="false">Local Survey List</string>
    <string name="Logout" translatable="false">LOGOUT</string>
    <string name="Start" translatable="false">Start Survey</string>
    <string name="Scan" translatable="false">Scan QR Code &amp; Start Survey</string>
    <string name="Personal" translatable="false">A. PERSONAL DETAILS</string>
    <string name="personal_details" translatable="false">Personal Details</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="saved" translatable="false">Saved successfully</string>
    <string name="vending_details" translatable="false">Vending Details</string>
    <string name="family_details" translatable="false">Family Details</string>
    <string name="banking" translatable="false">Banking Details</string>
    <string name="documents" translatable="false">Documents</string>
    <string name="PREVIOUS" translatable="false">PREVIOUS</string>
    <string name="NEXT" translatable="false">NEXT</string>
    <string name="URI" translatable="false">URI NO:</string>
    <string name="pending_supervisor" translatable="false">Pending Supervisor List</string>
    <string name="supervisor" translatable="false">Supervisor List</string>
    <string name="suspended_supervisor" translatable="false">Suspended Supervisor List</string>
    <string name="view_supervisor" translatable="false">View Supervisor List</string>
    <string name="surveyor_list" translatable="false">Surveyor Survey List</string>
    <string name="survey_details" translatable="false">Survey Details</string>
    <string name="scan_aadhar" translatable="false">Scan Aadhar to get data</string>
    <string name="VendorPhoto" translatable="false">Photo of the street vendor/Hawker</string>
    <string name="SitePhoto" translatable="false">Photo of Vending Site</string>
    <string name="VendorName" translatable="false">Name of the street vendor/Hawker</string>
    <string name="First" translatable="false">First</string>
    <string name="Middle" translatable="false">Middle</string>
    <string name="Surname" translatable="false">Surname</string>
    <string name="Sex" translatable="false">Sex</string>
    <string name="Male" translatable="false">a. Male</string>
    <string name="Female" translatable="false">b. Female</string>
    <string name="Other" translatable="false">c. Other</string>
    <string name="Age" translatable="false">Age</string>
    <string name="DOB" translatable="false">Date of Birth</string>
    <string name="Phone" translatable="false">Contact Number</string>
    <string name="Mobile" translatable="false">Mobile</string>
    <string name="Landline" translatable="false">Landline</string>
    <string name="Education" translatable="false">Education Status</string>
    <string name="HusbandName" translatable="false">Name of Father/Husband</string>
    <string name="MotherName" translatable="false">Name of Mother</string>
    <string name="SpouseName" translatable="false">Spouse Name</string>
    <string name="widowedName" translatable="false">Whether widowed/widower</string>
    <string name="Yes" translatable="false">Yes</string>
    <string name="No" translatable="false">No</string>
    <string name="Category" translatable="false">Category</string>
    <string name="Income" translatable="false">Annual Income</string>
    <string name="Address" translatable="false">Present Residential / Correspondence Address</string>
    <string name="Area" translatable="false">Area</string>
    <string name="HouseNo" translatable="false">House No.</string>
    <string name="Road" translatable="false">Road</string>
    <string name="City" translatable="false">City</string>
    <string name="Pincode" translatable="false">Pincode No.</string>
    <string name="PAddress" translatable="false">Permanent Address</string>
    <string name="same" translatable="false">Same as Residential</string>
    <string name="Aadhar" translatable="false">Aadhar Card details</string>
    <string name="AadharNo" translatable="false">Aadhar No</string>
    <string name="Verify" translatable="false">Verify</string>
    <string name="Verified" translatable="false">Verified</string>
    <string name="NoAadhar" translatable="false">No Aadhar Card </string>
    <string name="Capture" translatable="false">Capture Biometric</string>
    <string name="Open" translatable="false">Open Device</string>
    <string name="Case" translatable="false">Whether convicted in any case or criminal case pending?</string>
    <string name="Ifyes" translatable="false">If yes,</string>
    <string name="ADD" translatable="false">ADD</string>
    <string name="Vending" translatable="false">C. VENDING DETAILS</string>
    <string name="VendingType" translatable="false">Type of vending/ Hawking or items sold </string>
    <string name="VendingName" translatable="false">Name of Vending/Hawking/Squatting site</string>
    <string name="Name" translatable="false">Name</string>
    <string name="VendingTime" translatable="false">Timing of Vending/Hawking/Squatting</string>
    <string name="From" translatable="false">From</string>
    <string name="To" translatable="false">To</string>
    <string name="ActiveDays" translatable="false">No. of days active per week (tick appropriate)</string>
    <string name="AllDays" translatable="false">All days</string>
    <string name="Monday" translatable="false">Monday</string>
    <string name="Tuesday" translatable="false">Tuesday</string>
    <string name="Wednesday" translatable="false">Wednesday</string>
    <string name="Thursday" translatable="false">Thursday</string>
    <string name="Friday" translatable="false">Friday</string>
    <string name="Saturday" translatable="false">Saturday</string>
    <string name="Sunday" translatable="false">Sunday</string>
    <string name="VendingYears" translatable="false">Number of yrs  of Vending/Hawking/Squatting in current location</string>
    <string name="StreetVendor" translatable="false">Has the applicant been previously recognized as a street vendor?</string>
    <string name="TypeVehicle" translatable="false">Type of structure / vehicle</string>
    <string name="DateVending" translatable="false">Date of start of vending activity in current location</string>
    <string name="Doc" translatable="false">Is document of Tehbazari available? </string>
    <string name="AreaChoice" translatable="false">Choice of vending area/market allotment </string>
    <string name="VendorsFam" translatable="false">B. VENDORs FAMILY DETAILS</string>
    <string name="FamDetails" translatable="false">Details of family members &amp; their occupation</string>
    <string name="Land" translatable="false">Land/Fixed assets owned by family, if any</string>
    <string name="SurveyedFam" translatable="false">Have other family members been surveyed?</string>
    <string name="Relationship" translatable="false">Relationship</string>
    <string name="AddFam" translatable="false">ADD FAMILY MEMBER</string>
    <string name="AddCase" translatable="false">ADD CRIMINAL CASES</string>
    <string name="CaseDate" translatable="false">Date of case</string>
    <string name="FIRNo" translatable="false">FIR No.</string>
    <string name="PoliceName" translatable="false">Name of Police</string>
    <string name="suspendRemark" translatable="false">Enter Suspend Remark</string>
    <string name="RemarkSuspend" translatable="false">Remark of Suspend</string>
    <string name="SUBMIT" translatable="false">SUBMIT</string>
</resources>