<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/AddFam"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/image_cancel"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_cancel_black_24dp"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"/>
    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/EditFamName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:hint="@string/Name"
            android:inputType="textCapSentences"
            android:imeOptions="actionNext"
            android:padding="10dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/EditFamRelation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:imeOptions="actionNext"
            android:background="@drawable/edittext_bg"
            android:hint="@string/Relationship"
            android:inputType="textCapSentences"
            android:padding="10dp"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/EditFamAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:hint="@string/Age"
            android:inputType="number"
            android:padding="10dp"
            android:imeOptions="actionNext"
            android:maxLength="3"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/EditFamAadhar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:hint="@string/AadharNo"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:maxLength="12"
            android:padding="10dp"
            android:textSize="14sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/TextAddMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/ADD"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_gravity="right"
        android:drawableRight="@drawable/ic_add_circle_black_24dp"
        android:drawablePadding="05dp"
        android:drawableTint="@color/colorAccent"
        android:layout_marginTop="15dp"/>
</LinearLayout>