<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/size_20dp"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/suspendRemark"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/image_cancel"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_cancel_black_24dp"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


    <EditText
        android:id="@+id/EditSuspendRemark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/RemarkSuspend"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:padding="10dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/TextSubmitRemark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/SUBMIT"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/colorAccent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"/>

</LinearLayout>